<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FontAndMusicActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPlayAudio1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_play_audio1" />

        <Button
            android:id="@+id/btnPlayAudio2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_play_audio2" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/str_uel"
        android:textColor="#9C27B0"
        android:textSize="20sp"
        android:textStyle="italic|bold" />

    <ListView
        android:id="@+id/lvFontAndMusic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FCE4EC" />

</LinearLayout>
